Object_Oriented_Software_Construction/Assignment6/code/swc-oosc-swcarchitect-webservice/twoServices/mysql.yaml
  apiVersion: v1
  kind: Pod
  metadata:
    labels:
      app: mysql
      name: mysqlpod
    name: mysql-pod
  spec:
    containers:
    - name: mysql
      image: mysql:latest
      imagePullPolicy: IfNotPresent
      ports:
      - containerPort: 3306
        protocol: TCP
