Object_Oriented_Software_Construction/Assignment6/code/swc-oosc-swcarchitect-webservice/twoServices/mysql-service.yaml
  apiVersion: v1
  kind: Service
  metadata:
    name: mysql-service
    labels:
      app: mysql
  spec:
    selector:
      app: mysql
    ports:
    - nodePort: 0
      port: 3306
      protocol: TCP
      targetPort: 3306
