Object_Oriented_Software_Construction/Assignment6/code/swc-oosc-swcarchitect-webservice/twoServices/service.yaml
  apiVersion: v1
  kind: Service
  metadata:
    name: twodemo-service
    labels:
      app: twodemo
  spec:
    selector:
      app: twodemo
      app: mysql
    ports:
    - nodePort: 0
      port: 8080
      protocol: TCP
      targetPort: 8080
