Object_Oriented_Software_Construction/Assignment6/code/swc-oosc-swcarchitect-webservice/twoServices/route.yaml
  apiVersion: v1
  kind: Route
  metadata:
    name: twodemo-route
    labels:
      app: twodemo
  spec:
    to:
      kind: Service
      name: twodemo-service
